--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "topthink/framework": "5.0.*"
+        "topthink/framework": "5.0.*",
+        "topthink/think-testing": "1.*",
+        "phpunit/dbunit": ">=1.2",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
